--- a/src/sass/layout/_header.sass
+++ b/src/sass/layout/_header.sass
@@ -133,6 +133,13 @@
     right: 24px
     height: 40px
 
+.button:before
+  content: ""
+  display: inline-block
+  height: 48px
+  vertical-align: middle
+  width: 0
+
 .button.button--mobile-fixed
   display: none
   position: fixed
